# plugin_NavierStokes

./: CMakeLists.txt  LICENSE  README.md  boost_reorder.h  cr_ilut.h  cr_order_cuthill_mckee.h  cr_reorder.cpp  cr_reorder.h  diffusion_length.h  filter.h  navier_stokes.cpp  navier_stokes.h  navier_stokes_base.cpp  navier_stokes_base.h  navier_stokes_bnd.h  navier_stokes_bnd_impl.h  navier_stokes_common.h  navier_stokes_cr.h  navier_stokes_cr_bnd.h  navier_stokes_cr_bnd_impl.h  navier_stokes_fe.h  navier_stokes_fv1.cpp  navier_stokes_fv1.h  navier_stokes_fvho.h  navier_stokes_plugin.cpp  navier_stokes_pybind.cpp  navier_stokes_tools.h  no_normal_stress_outflow.cpp  no_normal_stress_outflow.h  pressure_separation.h  pyproject.toml  register_navier_stokes.cpp  register_navier_stokes.h  stabilization.h  stabilization_impl.h  transforming_smoother.h  turbulent_viscosity_data.h  turbulent_viscosity_data_impl.h  upwind.cpp  upwind.h  (+3 more)
.github/workflows/: codeql.yml  wheels.yml
bnd/: inflow.h  inflow_base.h  inflow_base_impl.h  inflow_impl.h  no_normal_stress_outflow.cpp  no_normal_stress_outflow.h  no_normal_stress_outflow_base.cpp  no_normal_stress_outflow_base.h  no_normal_stress_outflow_common.h  no_normal_stress_outflow_cr.h  no_normal_stress_outflow_cr_impl.h  no_normal_stress_outflow_fv1.h  symmetric_boundary.cpp  symmetric_boundary.h  symmetric_boundary_cr.h  wall.h  wall_impl.h
compressible/: CMakeLists.txt  compressible_navier_stokes_base.cpp  compressible_navier_stokes_base.h  compressible_navier_stokes_plugin.cpp  register_compressible.cpp  register_compressible.h
compressible/fv1/: compressible_navier_stokes_fv1.cpp  compressible_navier_stokes_fv1.h  register_fv1.cpp  register_fv1.h
fe/: navier_stokes_fe.cpp  navier_stokes_fe.h  register_fe.cpp  register_fe.h
fe/bnd/: inflow_fe.h  inflow_fe_impl.h
fv/: navier_stokes_fv.cpp  navier_stokes_fv.h  register_fv.cpp  register_fv.h
fv/bnd/: inflow_fv.h  inflow_fv_impl.h  no_normal_stress_outflow_fv.cpp  no_normal_stress_outflow_fv.h
fv1/: diffusion_length.h  navier_stokes_fv1.cpp  navier_stokes_fv1.h  register_fv1.cpp  register_fv1.h  stabilization.cpp  stabilization.h  stabilization_impl.h  turbulent_viscosity_fv1.h  turbulent_viscosity_fv1_impl.h
fv1/bnd/: inflow_fv1.h  inflow_fv1_impl.h  no_normal_stress_outflow_fv1.cpp  no_normal_stress_outflow_fv1.h  symmetric_boundary_fv1.cpp  symmetric_boundary_fv1.h
fvcr/: central_gradient.h  cr_ilut.h  cr_reorder.cpp  cr_reorder.h  disc_constraint_fvcr.h  navier_stokes_fvcr.cpp  navier_stokes_fvcr.h  pcr_ilut.h  pressure_gradient.h  pressure_separation.h  register_fvcr.cpp  register_fvcr.h  turbulent_viscosity_fvcr.h  turbulent_viscosity_fvcr_impl.h
fvcr/bnd/: inflow_fvcr.h  inflow_fvcr_impl.h  no_normal_stress_outflow_fvcr.cpp  no_normal_stress_outflow_fvcr.h  symmetric_boundary.cpp  symmetric_boundary.h  symmetric_boundary_fvcr.cpp  symmetric_boundary_fvcr.h
incompressible/: CMakeLists.txt  filter.h  filter_impl.h  incompressible_navier_stokes_base.cpp  incompressible_navier_stokes_base.h  incompressible_navier_stokes_plugin.cpp  navier_stokes_tools.h  particle_laden_flow_plugin Kopie.cpp  particle_laden_flow_plugin.cpp  particle_laden_flow_plugin.h  particle_laden_flow_plugin_origJonas.cpp  register_incompressible.cpp  register_incompressible.h  transforming_smoother.h
incompressible/bnd/: inflow_base.h  inflow_base_impl.h  no_normal_stress_outflow_base.cpp  no_normal_stress_outflow_base.h  wall.h  wall_impl.h
incompressible/fe/: navier_stokes_fe.cpp  navier_stokes_fe.h  register_fe.cpp  register_fe.h
incompressible/fe/bnd/: inflow_fe.h  inflow_fe_impl.h
incompressible/fv/: navier_stokes_fv.cpp  navier_stokes_fv.h  register_fv.cpp  register_fv.h
incompressible/fv/bnd/: inflow_fv.h  inflow_fv_impl.h  no_normal_stress_outflow_fv.cpp  no_normal_stress_outflow_fv.h
incompressible/fv1/: diffusion_length.h  navier_stokes_fv1.cpp  navier_stokes_fv1.h  navier_stokes_fv1_FV1.cpp  navier_stokes_fv1_IB.h  navier_stokes_fv1_IB_impl.h  navier_stokes_fv1_cutElem.cpp  navier_stokes_fv1_cutElem.h  register_fv1.cpp  register_fv1.h  stabilization.cpp  stabilization.h  turbulent_viscosity_fv1.h  turbulent_viscosity_fv1_impl.h
incompressible/fv1/bnd/: inflow_fv1.h  inflow_fv1_cutElem.h  inflow_fv1_cutElem_impl.h  inflow_fv1_impl.h  no_normal_stress_outflow_fv1.cpp  no_normal_stress_outflow_fv1.h  symmetric_boundary_fv1.cpp  symmetric_boundary_fv1.h  wall_sliding_fv1.cpp  wall_sliding_fv1.h
incompressible/fv1/moving_particle/: Info File 1  Info File 2  Info File 3  immersed_bnd_cond_particle.h  immersed_bnd_cond_particle_impl.h  loc_to_glob_mapper_particle.h  loc_to_glob_mapper_particle_impl.h  loc_to_glob_mapper_particle_tools.h  meanID_tools.h  moving_particle.h  moving_particle_impl.h  moving_particle_tools.h
incompressible/fv1/two_phase_flow/: interface_handler_2pf.h  interface_handler_2pf_impl.h  loc_to_glob_mapper_2pf.h  loc_to_glob_mapper_2pf_impl.h  two_phase_flow.h  two_phase_flow_impl.h
incompressible/fvcr/: cr_ilut.h  cr_reorder.cpp  cr_reorder.h  disc_constraint_fvcr.h  navier_stokes_fvcr.cpp  navier_stokes_fvcr.h  pcr_ilut.h  pressure_separation.h  register_fvcr.cpp  register_fvcr.h  turbulent_viscosity_fvcr.h  turbulent_viscosity_fvcr_impl.h
incompressible/fvcr/bnd/: inflow_fvcr.h  inflow_fvcr_impl.h  no_normal_stress_outflow_fvcr.cpp  no_normal_stress_outflow_fvcr.h  symmetric_boundary_fvcr.cpp  symmetric_boundary_fvcr.h
lua/: lua-include.lua
